'新增cocowx文件夹内部文件'

--- a/cocowx/app.styl
+++ b/cocowx/app.styl
@@ -26,8 +26,10 @@ input[disabled]
 
 // 滚动加载tip提示语
 .tips-contain 
+  padding: 10rpx 0
   font-size: $fontSize24
   text-align: center
+  background-color: $gray
   &.pos-page
     position: absolute
     top: 280rpx
@@ -41,10 +43,7 @@ input[disabled]
   align-items: center
   align-self: center
   justify-content: center
-
-.tips-load-all 
-  padding: 10rpx 0
-  background-color: $gray
+// .tips-load-all 
 
 .flex-col-1 
   flex: 1
