--- a/cocowx/pages/orderDetail/orderDetail.styl
+++ b/cocowx/pages/orderDetail/orderDetail.styl
@@ -42,6 +42,14 @@ page
       font-size: $fontSize24
       line-height: 58rpx
       color: $tct666
+  .olmo-remrks
+    display: flex
+    .or-name
+      width: 70rpx
+    .olmor-text
+      flex: 1
+      padding: 12rpx 0 0 80rpx
+           
     
 .ol-footer 
   position: absolute
