--- a/cocowx/stylus/global.styl
+++ b/cocowx/stylus/global.styl
@@ -16,7 +16,7 @@ $textDefaultColor = rgb(51,51,51)
 $textGrayColor = rgb(151,151,151)
 $tct666 = rgb(102, 102, 102) // textColorTitle #666
 $minorColor = rgb(205, 205, 205)
-
+$headPorBg = rgb(191, 188, 188)
 
 // 皮肤模块
 // $themeNum
@@ -34,7 +34,7 @@ $skin-red = 'theme-red' // 红色主题容器class
 $width100 = 100%
 $screenWidth = 750rpx
 $mainPicSize = 150rpx
-$bannerHei = 380rpx // 380rpx
+$bannerHei = 328rpx // 380rpx
 $footerHei = 88rpx
 $moduleSpacing = 14rpx
 
