1.创建一个git提交时忽略文件的配置文件\n 2.更新cocowx文件夹下的文件

--- a/cocowx/pages/goodsDetail/goodsDetail.styl
+++ b/cocowx/pages/goodsDetail/goodsDetail.styl
@@ -35,7 +35,7 @@ page
     /* 标题|价格 */
     .gd-title, .gd-price 
       font-weight: bold
-      font-size: $fontSize36
+      font-size: $fontSize40
 
     .gd-title 
       padding: 30rpx 0 20rpx 0
@@ -43,7 +43,7 @@ page
       font-weight: bold
 
     .gd-price 
-      padding-bottom: 50rpx
+      // padding-bottom: 50rpx
       margin-bottom: 30rpx
       border-bottom: 1rpx solid $gray
   
