--- a/cocowx/pages/index/index.styl
+++ b/cocowx/pages/index/index.styl
@@ -49,6 +49,9 @@ page
   line-height: 44rpx
   font-weight: bold
   color: $black
+  color: $black
+  &.gsct-activity
+    font-size: $fontSize36
   &.gsc-title12 
     margin-top: 10rpx
 
