--- a/cocowx/stylus/global.styl
+++ b/cocowx/stylus/global.styl
@@ -46,6 +46,7 @@ $padding10 = 10rpx
 $borderDefault = #ccc
 $radiusBase = 6rpx
 
+$fontSize40 = 40rpx // 20px
 $fontSize36 = 36rpx // 18px
 $fontSize32 = 32rpx // 16px
 $fontSize30 = 30rpx // 15px
