--- a/cocowx/components/orderAddress/orderAddress.styl
+++ b/cocowx/components/orderAddress/orderAddress.styl
@@ -18,7 +18,7 @@ baseStyle()
     width: 30rpx
   .oaa-info 
     position: relative
-    padding-left: 30rpx
+    padding: 0 30rpx
     .oaai-person 
       margin-bottom: 5rpx
       font-size: $fontSize28
