--- a/cocowx/pages/activityDetail/activityDetail.styl
+++ b/cocowx/pages/activityDetail/activityDetail.styl
@@ -19,7 +19,7 @@ page
     padding: 30rpx $paddingPage
     font-size: $fontSize40
     font-weight: bold
-    line-height: 52rpx
+    line-height: $detTitleLineHei
     textOverflowEs(2)
     background-color: $white
   .adm-desc 
@@ -27,7 +27,10 @@ page
     background-color: $white
     view 
       overflow: hidden
-      line-height: 44rpx
+      font-size: $fontSize32Im
+      line-height: $detailLineHei
+    image 
+      margin-bottom: 16rpx   
   // 空状态
   .adm-es
     display: flex
