--- a/cocowx/pages/orderConfirm/orderConfirm.styl
+++ b/cocowx/pages/orderConfirm/orderConfirm.styl
@@ -16,7 +16,9 @@ page
   border-bottom: 1rpx solid $borderColorBase
 
 .oc-footer 
+  width: 100%
   box-sizing: border-box
+  justify-content: space-between
   color: $tct666
 	.ocf-text 
     box-sizing: border-box
