--- a/cocowx/pages/orderList/orderList.styl
+++ b/cocowx/pages/orderList/orderList.styl
@@ -76,6 +76,8 @@ page
       .olml-single 
         margin-bottom: $moduleSpacing
         background-color: $white
+        &:last-child
+          margin-bottom: 0
         .olmls-footer 
           display: flex
           justify-content: space-between
