--- a/cocowx/stylus/buyNumber.styl
+++ b/cocowx/stylus/buyNumber.styl
@@ -3,11 +3,12 @@ $heightT1 = 54rpx
 
 .bnq-quantity 
   display: flex
+  justify-content: space-between
   padding: 0 $paddingPage
   background-color: $white
 
 .bnq-title
-  width: 70vw
+  width: 60vw
 
 .bnq-num
   display: flex
