--- a/cocowx/stylus/global.styl
+++ b/cocowx/stylus/global.styl
@@ -49,12 +49,16 @@ $radiusBase = 6rpx
 $fontSize40 = 40rpx // 20px
 $fontSize36 = 36rpx // 18px
 $fontSize32 = 32rpx // 16px
+$fontSize32Im = 16px!important // 16px
 $fontSize30 = 30rpx // 15px
 $fontSize28 = 28rpx // 14px
 $fontSize24 = 24rpx // 12px
 $fontSize20 = 20rpx // 10px
 
-$footerBtnWidth = 280rpx
+$detailLineHei = 48rpx // 内容行高
+$detTitleLineHei = 56rpx // 商品详情/专题页标题行高
+
+$footerBtnWidth = 280rpx // 底部栏btn默认宽度
 //$footerBtnWidth1 = 250rpx;
 
 // 多行省略号
@@ -91,3 +95,4 @@ clearButton()
 
 paddingBase()
   padding: 0 $paddingPage
+
