--- a/cocowx/pages/activityDetail/activityDetail.wxml
+++ b/cocowx/pages/activityDetail/activityDetail.wxml
@@ -2,7 +2,7 @@
 <import src="../../wxParse/wxParse.wxml"/> 
 <view class="ad-main">
   <block wx:if="{{!isEmptyList}}">
-    <view class="adm-banner"><image src="{{marketingDetail.marketingDetailsImg + imgQuery}}"></image></view>
+    <view class="adm-banner"><image bindtap="previewImg" data-src="{{marketingDetail.marketingDetailsImg + imgQuery}}" src="{{marketingDetail.marketingDetailsImg + imgQuery}}"></image></view>
     <view class="adm-title" wx:if="{{marketingDetail.marketingName}}"><text>{{marketingDetail.marketingName}}</text></view>
     <view class="adm-desc">
       <template is="wxParse" data="{{wxParseData: article.nodes}}"/> <!-- 商品详情desc -->
