--- a/cocowx/pages/index/index.wxss
+++ b/cocowx/pages/index/index.wxss
@@ -1,7 +1,6 @@
 page {
   background-color: #f1f1f1;
   height: 100vh;
-  font-family: 'Microsoft Yahei';
 }
 .banner_contain {
   height: 328rpx;
@@ -16,8 +15,7 @@ page {
 .goods-single_contain {
   display: flex;
   box-sizing: border-box;
-  padding: 10rpx 24rpx;
-  border-bottom: 1rpx solid #f1f1f1;
+  padding: 10rpx 0 10rpx 24rpx;
 }
 .goods-single_contain:first-child {
   padding-top: 24rpx;
@@ -38,31 +36,40 @@ page {
   box-sizing: border-box;
   position: relative;
   width: 428rpx;
-  padding-left: 26rpx;
+  margin-left: 26rpx;
+  padding-right: 24rpx;
+}
+.goods-single_content::after {
+  content: ' ';
+  position: absolute;
+  bottom: -12rpx;
+  width: 100%;
+  height: 2rpx;
+  transform: scaleY(0.5);
+  background-color: #f1f1f1;
 }
 .gsc-quot {
-  width: 29rpx;
-  height: 24rpx;
-  margin-top: 36rpx;
+  width: 38rpx;
+  height: 26rpx;
+  margin: 42rpx 0 0 10rpx;
 }
 .goods-single_content__title {
-  margin-top: 30rpx;
+  margin-top: 20rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   font-size: 32rpx;
-  line-height: 44rpx;
+  line-height: 40rpx;
   font-weight: bold;
-  color: #010101;
-  color: #010101;
+  color: #333;
 }
 .goods-single_content__title.gsct-activity {
   font-size: 36rpx;
 }
 .goods-single_content__title.gsc-title12 {
-  margin-top: 10rpx;
+  margin-top: 22rpx;
 }
 .goods-single_content__text {
   overflow: hidden;
@@ -70,9 +77,8 @@ page {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  padding-top: 16rpx;
+  padding-top: 14rpx;
   font-size: 28rpx;
-  letter-spacing: 1px;
   color: #979797;
 }
 .goods-smile {
@@ -80,8 +86,8 @@ page {
   justify-content: flex-end;
   align-items: center;
   position: absolute;
-  bottom: 10rpx;
-  right: 12rpx;
+  bottom: 16rpx;
+  right: 24rpx;
   width: 100%;
   height: 38rpx;
   font-size: 24rpx;
@@ -94,10 +100,10 @@ page {
 .goods-smile image {
   position: absolute;
   top: 50%;
-  left: -36rpx;
-  transform: translateY(-50%);
-  width: 32rpx;
-  height: 32rpx;
+  left: -38rpx;
+  width: 34rpx;
+  height: 34rpx;
+  transform: translateY(-18rpx);
   margin-right: 8rpx;
 }
 .hmg-es {
@@ -118,6 +124,7 @@ page {
   height: 100rpx;
   border-radius: 100%;
   z-index: 2;
+  opacity: 0.98;
 }
 .fixed-my image {
   width: 100rpx;
@@ -238,4 +245,22 @@ page {
 .person-list-aside .plm-body .plmb-list .plmbo-single .icon-address-manage {
   width: 28rpx;
   height: 34rpx;
+}
+.pdr-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 10rpx;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+  width: 352rpx;
+  height: 48rpx;
+  border-radius: 48rpx;
+  font-size: 24rpx;
+  text-align: center;
+  color: #fff;
+  background-color: #2caef8;
+  animation: fadeIn 1s;
 }
